--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -11,11 +11,25 @@ button {
     background: #3498db;
     padding: 11px 20px 10px 20px;
     text-decoration: none;
+    width: 150px;
 }
 
 button:hover {
     background: #3cb0fd linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
+}
+
+button:active {
+    background: #0D3184;
+    text-decoration: none;
+}
+
+button:visited {
+    text-decoration: none;
+}
+
+button:focus {
+    outline:0;
 }
 
 h1 {
@@ -32,6 +46,7 @@ h1 {
 #drone_list {
     float: left;
     width: 150px;
+    min-width: 150px;
     margin-top: 10px;
 }
 
@@ -41,12 +56,22 @@ h1 {
     margin-top: 10px;
 }
 
-
 .list_item {
     background: #FFAA00;
     height: 40px;
     margin-bottom: 2px;
     color: #0D3184;
+}
+
+.header_item {
+    background: #C55900 ;
+    height: 40px;
+    margin-bottom: 2px;
+    color: black;
+}
+
+.placeholder_item {
+    visibility: hidden;
 }
 
 .list_item:hover {
